[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ffsim"
requires-python = ">=3.10"
version = "0.0.65"
description = "Faster simulations of fermionic quantum circuits."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jax",
    # restrict Numpy version due to https://github.com/pyscf/pyscf/issues/3079
    # TODO remove this when it's fixed
    "numpy <= 2.3",
    "opt_einsum",
    "orjson",
    "pyscf >= 2.9",
    "qiskit >= 2.0",
    "scipy",
    "typing-extensions",
]

[project.urls]
Homepage = "https://github.com/qiskit-community/ffsim"
Documentation = "https://qiskit-community.github.io/ffsim/"

[project.optional-dependencies]
dev = [
    "coverage",
    "maturin",
    "mypy",
    "myst-parser",
    "nbmake",
    "nbsphinx",
    "pre-commit",
    "pytest",
    "qiskit[visualization]",
    "qiskit-sphinx-theme",
    "ruff == 0.14.13",
    "sphinx",
    "sphinx-autodoc-typehints",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "ffsim._lib"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
files = ["python/**/*.py", "python/**/*.pyi", "tests/**/*.py", "docs/**/*.py"]

[tool.ruff]
src = ["python"]
include = [
    "pyproject.toml",
    "python/**/*.py",
    "python/**/*.pyi",
    "tests/**/*.py",
    "tests/**/*.pyi",
    "docs/**/*.py",
    "docs/**/*.pyi",
    "docs/**/*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "NPY", "NPY201"]

[tool.cibuildwheel]
build = "cp310-macosx* cp310-manylinux_x86_64 cp310-manylinux_aarch64"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
before-all = "dnf install -y cargo openblas-devel openssl-devel rust"
