[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ffsim"
requires-python = ">=3.10"
version = "0.0.73.dev"
description = "Faster simulation of fermionic quantum circuits."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jax",
    # restrict Numpy version due to https://github.com/pyscf/pyscf/issues/3079
    # TODO remove this when it's fixed
    "numpy <= 2.3",
    "opt_einsum",
    "orjson",
    "pyscf >= 2.9",
    "qiskit >= 2.0",
    "scipy",
    "typing-extensions",
]

[project.urls]
Homepage = "https://github.com/qiskit-community/ffsim"
Documentation = "https://qiskit-community.github.io/ffsim/"

[project.optional-dependencies]
dev = [
    "coverage",
    "maturin",
    "mypy",
    "myst-parser",
    "nbmake",
    "nbsphinx",
    "pre-commit",
    "pytest",
    "qiskit[visualization]",
    "qiskit-sphinx-theme",
    "ruff",
    "sphinx",
    "sphinx-autodoc-typehints",
    "typos",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "ffsim._lib"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
files = ["python/**/*.py", "python/**/*.pyi", "tests/**/*.py", "docs/**/*.py"]

[tool.ruff]
src = ["python"]
include = [
    "pyproject.toml",
    "python/**/*.py",
    "python/**/*.pyi",
    "tests/**/*.py",
    "tests/**/*.pyi",
    "docs/**/*.py",
    "docs/**/*.pyi",
    "docs/**/*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "NPY", "NPY201", "RUF"]

[tool.typos.default]
# Jupyter notebook cell IDs
extend-ignore-re = ["[0-9a-f]{8,}"]

[tool.typos.default.extend-words]
datas = "datas"
ket = "ket"

[tool.tox]
min_version = "4.6.0"
env_list = [
    "py{310,311,312,313,314}",
    "coverage",
    "type",
    "lint",
    "format",
    "spell",
    "docs",
]

[tool.tox.env_run_base]
description = "run tests"
package = "wheel"
wheel_build_env = ".pkg"
extras = ["dev"]
commands = [["pytest", "{posargs}"]]

[tool.tox.env.coverage]
description = "check test coverage"
extras = ["dev"]
commands = [
    [
        "coverage",
        "run",
        "--source",
        "ffsim",
        "-m",
        "pytest",
        "{posargs}",
    ],
    [
        "coverage",
        "report",
        "--fail-under=80",
    ],
]

[tool.tox.env.type]
description = "run type check"
extras = ["dev"]
commands = [["mypy"]]

[tool.tox.env.lint]
description = "check for lint"
skip_install = true
deps = ["ruff"]
allowlist_externals = ["cargo"]
commands = [
    [
        "ruff",
        "check",
    ],
    [
        "cargo",
        "clippy",
        "--all",
        "--",
        "-D",
        "warnings",
    ],
]

[tool.tox.env.format]
description = "check formatting"
skip_install = true
deps = ["ruff"]
allowlist_externals = ["cargo"]
commands = [
    [
        "ruff",
        "format",
        "--check",
    ],
    [
        "cargo",
        "fmt",
        "--all",
        "--",
        "--check",
    ],
]

[tool.tox.env.spell]
description = "check spelling"
skip_install = true
deps = ["typos"]
commands = [["typos"]]

[tool.tox.env.docs]
description = "build docs"
extras = ["dev"]
set_env = { SPHINX_APIDOC_OPTIONS = "members,show-inheritance" }
commands = [
    [
        "python",
        "-c",
        'import shutil, pathlib; shutil.rmtree(pathlib.Path("docs") / "stubs", ignore_errors=True)',
    ],
    [
        "python",
        "-c",
        'import shutil, pathlib; shutil.rmtree(pathlib.Path("docs") / "_build" / "html" / ".doctrees", ignore_errors=True)',
    ],
    [
        "sphinx-build",
        "-b",
        "html",
        "-W",
        "{posargs}",
        "docs/",
        "docs/_build/html",
    ],
]

[tool.cibuildwheel]
build = "cp310-macosx* cp310-manylinux_x86_64 cp310-manylinux_aarch64"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
before-all = "dnf install -y openblas-devel openssl-devel"
